@@ -23,7 +23,7 @@ extern module AP_MODULE_DECLARE_DATA fcgid_module;
 #define DEFAULT_MAX_CLASS_PROCESS_COUNT 100
 #define DEFAULT_MIN_CLASS_PROCESS_COUNT 3
 #define DEFAULT_IPC_CONNECT_TIMEOUT 3
-#define DEFAULT_IPC_COMM_TIMEOUT 20
+#define DEFAULT_IPC_COMM_TIMEOUT 40
 #define DEFAULT_OUTPUT_BUFFERSIZE 65536
 #define DEFAULT_MAX_REQUESTS_PER_PROCESS -1
 
