@@ -558,7 +558,7 @@ static const command_rec fcgid_cmds[] = {
 				  "Communication timeout to fastcgi server"),
 	AP_INIT_TAKE12("DefaultInitEnv", add_default_env_vars, NULL, RSRC_CONF,
 				   "an environment variable name and optional value to pass to FastCGI."),
-	AP_INIT_TAKE12("FCGIWrapper", set_wrapper_config, NULL, ACCESS_CONF,
+	AP_INIT_TAKE12("FCGIWrapper", set_wrapper_config, NULL, RSRC_CONF|ACCESS_CONF|OR_FILEINFO,
 				   "The CGI wrapper setting"),
 	AP_INIT_TAKE1("PHP_Fix_Pathinfo_Enable",
 				  set_php_fix_pathinfo_enable,
@@ -568,22 +568,22 @@ static const command_rec fcgid_cmds[] = {
 				  NULL, RSRC_CONF,
 				  "Max requests handled by each fastcgi application"),
 	AP_INIT_TAKE1("FastCgiAuthenticator", set_authenticator_info, NULL,
-				  ACCESS_CONF,
+				  ACCESS_CONF|OR_FILEINFO,
 				  "a absolute authenticator file path"),
 	AP_INIT_FLAG("FastCgiAuthenticatorAuthoritative",
-				 set_authenticator_authoritative, NULL, ACCESS_CONF,
+				 set_authenticator_authoritative, NULL, ACCESS_CONF|OR_FILEINFO,
 				 "Set to 'off' to allow authentication to be passed along to lower modules upon failure"),
 	AP_INIT_TAKE1("FastCgiAuthenticator", set_authorizer_info, NULL,
-				  ACCESS_CONF,
+				  ACCESS_CONF|OR_FILEINFO,
 				  "a absolute authorizer file path"),
 	AP_INIT_FLAG("FastCgiAuthenticatorAuthoritative",
-				 set_authorizer_authoritative, NULL, ACCESS_CONF,
+				 set_authorizer_authoritative, NULL, ACCESS_CONF|OR_FILEINFO,
 				 "Set to 'off' to allow authorization to be passed along to lower modules upon failure"),
 	AP_INIT_TAKE1("FastCgiAccessChecker", set_access_info, NULL,
-				  ACCESS_CONF,
+				  ACCESS_CONF|OR_FILEINFO,
 				  "a absolute access checker file path"),
 	AP_INIT_FLAG("FastCgiAccessCheckerAuthoritative",
-				 set_access_authoritative, NULL, ACCESS_CONF,
+				 set_access_authoritative, NULL, ACCESS_CONF|OR_FILEINFO,
 				 "Set to 'off' to allow access control to be passed along to lower modules upon failure"),
 	{NULL}
 };
