@@ -1,6 +1,8 @@
 version 2.01 ()
 1. Add missing config.m4 and Makefile.in for static linking
 	Thank Mark Drago for notice
+2. FCGIWrapper disallowed in .htaccess
+	Thank Balinares for patch
 
 version 2.0 ( Oct 29th 2006 )
 1. Support FastCGI Authorizer protocols now.
